--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 .header{
     background-color: aqua;
     text-align: center;
-    background-image: url();
+    background-image: url(download.jfif);
 
 background-size: cover;
 
